k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: twiga-scan
  labels:
    name: twiga-scan
    app: twiga-scan
